fix(full-width section): fix z-index

--- a/app/client/stylesheets/components/pu-highlight.sass
+++ b/app/client/stylesheets/components/pu-highlight.sass
@@ -116,6 +116,7 @@
         padding-left: 0
         position: relative
 
+
         .pu-floatingbutton
             position: absolute
             z-index: 11
@@ -129,6 +130,10 @@
             &.right
                 right: 50px
 
+
+        h1, h3
+            position: relative
+            z-index: 3
 
 
         &:after, &:before
